--- a/src/app/core/header/header-lap/header-lap.component.html
+++ b/src/app/core/header/header-lap/header-lap.component.html
@@ -14,20 +14,20 @@
           <input  type = "search"  matInput placeholder="Search" >
       </mat-form-field>
     </div>
-    <div class = "col-1" style="padding-right: 0px; padding-left: 0.5%; display: flex; flex-direction: column; justify-content: center;">
+    <div class = "col-1 cursorP" style="padding-right: 0px; padding-left: 0.5%; display: flex; flex-direction: column; justify-content: center;">
       <div style="display: flex; align-items: center; font-size: 1.25vw">
           Questions  <mat-icon>contact_support</mat-icon>
       </div>
     </div>
 
 
-    <div class = "col-1" style="padding-right: 0px; padding-left: 2%; display: flex; flex-direction: column; justify-content: center;">
+    <div class = "col-1 cursorP" style="padding-right: 0px; padding-left: 2%; display: flex; flex-direction: column; justify-content: center;">
       <div style="display: flex; align-items: center; font-size: 1.25vw">
           Login  <mat-icon>account_circle</mat-icon>
       </div>
     </div>
 
-    <div class = "col-2 col-sm1" style="margin-left: auto;padding-right: 0px; display: flex; flex-direction: column; align-items: center;justify-content: center;">
+    <div class = "col-2 col-sm1 cursorP" style="margin-left: auto;padding-right: 0px; display: flex; flex-direction: column; align-items: center;justify-content: center;">
       <div style="display: flex; align-items: center; font-size: 1.25vw;" id = "shopping">
           Shopping Cart <mat-icon>shopping_cart</mat-icon>
       </div>
