--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <app-header-lap *ngIf="!xsOrSmall">
 
 </app-header-lap>
-<app-header-hand *ngIf="xsOrSmall">
+<app-header-hand *ngIf="xsOrSmall" [side_nav]="sidenav">
 
 </app-header-hand>
