--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
-<mat-sidenav-container>
+<mat-sidenav-container style="width: 100%; padding: 0px; margin: 0px;">
   <mat-sidenav style="width:50vw" [mode] = "'push'" #side_nav>
     <app-navbar></app-navbar>
   </mat-sidenav>
-  <!-- TODO Decide To Add a size limit like digi kala site and make it more dynamice for smaller sizes  -->
+  <!-- TODO Decide To Add a size limit like digi kala site and make it more dynamice for smaller sizes -->
   <mat-sidenav-content>
     <app-header [sidenav] = "side_nav" ></app-header>
     <router-outlet></router-outlet>
