--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
+
+
 html{
   width: 100%;
   height: 100%;
-  /* TODO add this min width to other parts */
-  /* min-width: 1000px; */
+  padding: 0px;
+  margin: 0px;
 }
 
 body{
   width: 100%;
   height: 100%;
+  padding: 0px;
   margin: 0px;
+  /* background: blue; */
+}
+
+body{
+  min-width: 1024px;
 }
 
 
+@media(max-width : 576px){
+  body{
+    min-width: 0px;
+  }
+}
+
 app-root{
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
   margin: 0px;
+  padding: 0px;
 }
