--- a/src/app/shared-materials/carousel-promo/carousel-promo.component.html
+++ b/src/app/shared-materials/carousel-promo/carousel-promo.component.html
@@ -1,9 +1,11 @@
 <div>
 
 
-<mat-icon (click)="goRight()"   class="arrow_back">arrow_back_ios</mat-icon>
+<div (click)="goRight()" style="position: absolute; left: 0px; top : 0px; z-index: 999999;  height: 100%; width: 5%; cursor: pointer;">
+<mat-icon    class="arrow_back">arrow_back_ios</mat-icon>
+</div>
 
-<a    *ngFor="let promo of promos; let i = index" style="z-index: 1">
+<a *ngFor="let promo of promos; let i = index" style="z-index: 1">
 <img [src] = "promo.image_address"  class="img-fluid" style="position: absolute; left: 0px; top: 0px;height: 100%; width: 100%"
 [ngClass]="{'right_to_middle_c': this.logics[i].r2m, 'middle_to_right_c': this.logics[i].m2r, 'left_to_middle_c': this.logics[i].l2m, 'middle_to_left_c': this.logics[i].m2l}" *ngIf="i == 0">
 </a>
@@ -12,8 +14,19 @@
 [ngClass]="{'right_to_middle_c': this.logics[i].r2m, 'middle_to_right_c': this.logics[i].m2r, 'left_to_middle_c': this.logics[i].l2m, 'middle_to_left_c': this.logics[i].m2l}" *ngIf="i != 0">
 </a>
 
-<mat-icon (click)="goLeft()" class="arrow_forward">arrow_forward_ios</mat-icon>
 
+
+<div (click)="goLeft()" style="position: absolute; right: 0px; top : 0px; z-index: 999999;  height: 100%; width: 5%; cursor: pointer;">
+  <mat-icon  class="arrow_forward">arrow_forward_ios</mat-icon>
+</div>
+
+
+<div style="position: absolute; bottom: 0; width: 100%; height: 10%; left: 0px; display: flex; justify-content: center; align-items: center">
+  <div *ngFor="let promo of promos; let i = index">
+  <mat-icon style="color : blue" *ngIf="i == cnt">panorama_fish_eye</mat-icon>
+  <mat-icon style="color : white" *ngIf="i != cnt">panorama_fish_eye</mat-icon>
+  </div>
+</div>
 
 
 </div>
