--- a/src/app/main/main-page/main-page-lap/main-page-lap.component.css
+++ b/src/app/main/main-page/main-page-lap/main-page-lap.component.css
@@ -1,7 +1,22 @@
-@import '../../../../../node_modules/bootstrap/dist/css/bootstrap.css'
+@import '../../../../../node_modules/bootstrap/dist/css/bootstrap.css';
+
+
+
+.first-row{
+  height : 900px !important;
+  max-height: 900px !important;
+  padding: 0px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 
 
 
+mat-card{
+  width: 100% !important;
+  margin: 0px !important;
+}
 
 
