--- a/src/app/main/main-page/main-page-lap/main-page-lap.component.html
+++ b/src/app/main/main-page/main-page-lap/main-page-lap.component.html
@@ -1,26 +1,47 @@
-<div class="container-fluid my-3 row" style="width: 100%; height:auto">
-  <div class="col-9" >
-    <!-- TODO check if setting the height to an static value is ok -->
-    <mat-card class="mb-4" style="overflow: hidden;height : 350px; padding: 0px;" >
 
-      <app-carousel-promo [promos]="getImagesPromo('main_promos')"></app-carousel-promo>
-      <!-- <img src="https://cdn-assets.alltrails.com/uploads/photo/image/21732959/extra_large_e9ff46febfc0f6e85fab546c8808945b.jpg"
-      class="img-fluid" style="position: absolute; left: 0px; top: 0px;height: 100%; width: 100%">
+<!--
+  This is the explanation for this following componetns html
+  you have the first div just for the margin from top and in each section you need to
+  say how many columns one might have,
+  then you have a div which specifies the height and then you proceed to share this height
+  also for some reasons the cards have to be direct childs of the html : TODO check this later
+ -->
 
-      <img src="https://jpdirollphotography.files.wordpress.com/2019/01/dsc_6292-edited-final-lum-mask-100518-c-web-srgb.jpg"
-      class="img-fluid" style="position: absolute; left: 0px; top: 0px;height: 100%; width: 100%; transform: translateX(-100%);"> -->
+<div class="mt-3 row" style="width: 100%;" >
+  <div class="col-10" style=" padding: 0px; padding-left:2%;">
+    <div class="first-row">
+      <div style = "height : 45%;">
+        <mat-card style="overflow: hidden; height: 100%;padding: 0px; ;width: 100% !important; margin : 0px ;"  >
+          <app-carousel-promo [promos]="getImagesPromo('main_promos')"></app-carousel-promo>
+        </mat-card>
+      </div>
 
-    </mat-card>
-    <mat-card style="height : 450px;">
-      a
-    </mat-card>
+      <div style = "height : 50%;">
+        <mat-card style="overflow: hidden; height: 100%;padding: 0px; ;width: 100% !important; margin : 0px ; background : transparent"  >
+          <app-promos-with-timer [promos]="data.promo_with_time"></app-promos-with-timer>
+        </mat-card>
+      </div>
+    </div>
   </div>
-  <div class="col-3" style="display: flex; flex-direction: column;" >
-    <mat-card class="mb-3" style="flex-grow: 1">
-      a
-    </mat-card>
-    <mat-card style="flex-grow: 1">
-      a
-    </mat-card>
+
+
+  <div class="col-2" style=" padding: 0px; padding-left:2%;">
+      <div class="first-row" >
+        <div style="height: 48%">
+          <mat-card style="height: 100%; width: 100%; padding: 0px;">
+            <img [src]="data.side_promo1.image_address" alt="promo" class="img-fluid" style="width: 100%; height: 100%;">
+          </mat-card>
+        </div>
+        <div style="height: 50%">
+          <mat-card style="height: 100%; width: 100%; padding: 0px;">
+            <img [src]="data.side_promo2.image_address" alt="promo" class="img-fluid" style="width: 100%; height: 100%;">
+          </mat-card>
+        </div>
+      </div>
+  </div>
+
+  <div class="col-3" style=" padding: 0px; padding-left:2%;">
+      <div class="first-row" >
+      </div>
   </div>
 </div>
