--- a/src/app/main/main-page/main-page-lap/promos-with-timer/promos-with-timer.component.html
+++ b/src/app/main/main-page/main-page-lap/promos-with-timer/promos-with-timer.component.html
@@ -1,18 +1,24 @@
 
 <div style = "display: flex; width : 100%; height: 100%;">
-    <div style="width: 15%; height: 100%;display: flex; flex-direction: column; justify-content: space-around">
+    <div style="flex-grow: 2; height: 100%;display: flex; flex-direction: column; justify-content: space-around" *ngIf="size.large">
       <div (click)="cnt = i" *ngFor="let promo of promos; let i = index;" style="cursor: pointer;;width: 100%; text-align: center">
         <button mat-raised-button color = "warn" *ngIf="cnt == i" style="width: 100%;">
-          {{promo.name}}
+          {{promo.product.name}}
         </button>
         <button mat-button *ngIf="cnt != i" style="width: 100%;">
-          {{promo.name}}
+          {{promo.product.name}}
         </button>
       </div>
     </div>
-    <div style="width: 85%;height: 100%;">
-        <mat-card style="width: 100%; height: 100%; padding: 0px;">
-        </mat-card>
+    <div style="flex-grow: 8;;height: 100%; display: flex; flex-direction: column;"
+    [ngStyle] = "{'max-width' : size.large ? '80%' : '100%'}">
+      <mat-card style="flex-grow: 8.2;overflow: hidden;"
+      [ngStyle]="{'max-height': size.large ? '100%' : '82%'}">
+        <app-promo-with-timer-detail [promo]="promos[cnt]"></app-promo-with-timer-detail>
+      </mat-card>
+      <div style="flex-grow: 1.8" *ngIf="!size.large">
+        <app-carousel-promo-names (num_selected) = "cnt = $event" [promos]= "promos" style="width: 100%; height: 100%;"></app-carousel-promo-names>
+      </div>
     </div>
 </div>
 
