--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,1 +1,8 @@
+<div style="width: 100%; height: 100%">
+
 <app-main-page-lap *ngIf="!xsOrSmall"></app-main-page-lap>
+
+<app-main-page-small *ngIf="xsOrSmall" style="width: 100% !important; height: 100% !important;display: flex"></app-main-page-small>
+
+
+</div>
