--- a/src/app/shared-materials/carousel-promo/carousel-promo.component.html
+++ b/src/app/shared-materials/carousel-promo/carousel-promo.component.html
@@ -1,8 +1,10 @@
 <div>
 
 
-<div (click)="goRight()" style="position: absolute; left: 0px; top : 0px; z-index: 999999;  height: 100%; width: 5%; cursor: pointer;">
-<mat-icon    class="arrow_back">arrow_back_ios</mat-icon>
+<div (click)="goRight()" style="position: absolute;
+ left: 0px; top : 0px; z-index: 999999;  height: 100%;
+ display : flex; cursor: pointer;align-items: center; justify-content: center;">
+<i class="material-icons" style="font-size: 3rem">keyboard_arrow_left</i>
 </div>
 
 <a *ngFor="let promo of promos; let i = index" style="z-index: 1">
@@ -16,10 +18,12 @@
 
 
 
-<div (click)="goLeft()" style="position: absolute; right: 0px; top : 0px; z-index: 999999;  height: 100%; width: 5%; cursor: pointer;">
-  <mat-icon  class="arrow_forward">arrow_forward_ios</mat-icon>
-</div>
 
+<div (click)="goLeft()" style="position: absolute;
+ right: 0px; top : 0px; z-index: 999999;  height: 100%;
+ display : flex; cursor: pointer;align-items: center; justify-content: center;">
+<i class="material-icons" style="font-size: 3rem">keyboard_arrow_right</i>
+</div>
 
 <div style="position: absolute; bottom: 0; width: 100%; height: 10%; left: 0px; display: flex; justify-content: center; align-items: center">
   <div *ngFor="let promo of promos; let i = index">
