--- a/src/app/main/main-page/main-page-lap/main-page-lap.component.html
+++ b/src/app/main/main-page/main-page-lap/main-page-lap.component.html
@@ -6,10 +6,13 @@
   then you have a div which specifies the height and then you proceed to share this height
   also for some reasons the cards have to be direct childs of the html : TODO check this later
  -->
+<div id = "mainContainer1" style="width: 100%; display: flex; justify-content: center;">
 
-<div class="mt-3 row" style="width: 100%;" >
-  <div class="col-10" style=" padding: 0px; padding-left:2%;">
-    <div class="first-row">
+<div id = "secondCont" style="width: 99%;">
+
+<div class="mt-3 row" style="margin-right: 0px; margin-left: 0px;width: 100%;padding : 0px;" >
+  <div class="col-10" style=" padding: 0px;">
+    <div class="first-row" >
       <div style = "height : 45%;">
         <mat-card style="overflow: hidden; height: 100%;padding: 0px; ;width: 100% !important; margin : 0px ;"  >
           <app-carousel-promo [promos]="getImagesPromo('main_promos')"></app-carousel-promo>
@@ -40,8 +43,16 @@
       </div>
   </div>
 
-  <div class="col-3" style=" padding: 0px; padding-left:2%;">
-      <div class="first-row" >
-      </div>
-  </div>
 </div>
+
+<!-- Because this part of the code was getting big we made the following part for the ease of
+      debuging -->
+  <app-product-line-main-lap [data]="data"   style="width:100%"></app-product-line-main-lap>
+
+<div style="width: 100%; height: 500px;">
+
+</div>
+
+</div>
+</div>
+
