--- a/src/app/shared-materials/carousel-promo/carousel-promo.component.html
+++ b/src/app/shared-materials/carousel-promo/carousel-promo.component.html
@@ -4,7 +4,7 @@
 <div (click)="goRight()" style="position: absolute;
  left: 0px; top : 0px; z-index: 999999;  height: 100%;
  display : flex; cursor: pointer;align-items: center; justify-content: center;">
-<i class="material-icons" style="font-size: 3rem">keyboard_arrow_left</i>
+<i class="material-icons" style="color: white;font-size: 3rem">keyboard_arrow_left</i>
 </div>
 
 <a *ngFor="let promo of promos; let i = index" style="z-index: 1">
@@ -22,7 +22,7 @@
 <div (click)="goLeft()" style="position: absolute;
  right: 0px; top : 0px; z-index: 999999;  height: 100%;
  display : flex; cursor: pointer;align-items: center; justify-content: center;">
-<i class="material-icons" style="font-size: 3rem">keyboard_arrow_right</i>
+<i class="material-icons" style="color: white;font-size: 3rem">keyboard_arrow_right</i>
 </div>
 
 <div style="position: absolute; bottom: 0; width: 100%; height: 10%; left: 0px; display: flex; justify-content: center; align-items: center">
