--- a/src/app/shared-materials/carousel-products/show-product/show-product.component.html
+++ b/src/app/shared-materials/carousel-products/show-product/show-product.component.html
@@ -1,5 +1,25 @@
 
-<div style="width: 100%; height: 100%;">
+<div (mouseover)="elavated=true" (mouseout)="elavated=false"
+style="cursor: pointer;;width: 100%; height: 100%;display: flex; justify-content: space-around; flex-direction: column"
+[ngClass]="{'mat-elevation-z1' : elavated}" >
+
+
+  <div style="width: 100%; height: 80%;display: flex; justify-content: center; align-items: center">
+
+    <img [src]="product.image_address[0]" alt="product-photo" class="img-fluid">
+
+  </div>
+
+  <div style="width: 100%; height: 5%;display: flex; justify-content: center; align-items: center; overflow: hidden;">
+    {{product.name}}
+  </div>
+
+  <div style="width: 100%; height: 3%;display: flex; justify-content: center; align-items: center">
+
+    {{product.reduced_price ? product.reduced_price:  product.main_price}}
+
+  </div>
+
 
 </div>
 
