--- a/src/app/main/main-page/main-page-lap/promos-with-timer/promo-with-timer-detail/promo-with-timer-detail.component.html
+++ b/src/app/main/main-page/main-page-lap/promos-with-timer/promo-with-timer-detail/promo-with-timer-detail.component.html
@@ -11,9 +11,9 @@
     </p>
     <p style="opacity: 1; font-size: 2.5rem; display: flex;;align-items: center">
     {{promo.product.main_price - (promo.percent * promo.product.main_price)}}$ CAD  &nbsp;
-    <mat-chip-list>
-      <mat-chip selected color='warn' style="font-size: 1.125rem;">
-        {{promo.percent}} % Discount
+    <mat-chip-list >
+      <mat-chip selected color='warn' >
+        {{promo.percent}}% Discount
       </mat-chip>
     </mat-chip-list>
     </p>
