--- a/src/app/main/main-page/main-page-lap/promos-with-timer/promo-with-timer-detail/promo-with-timer-detail.component.css
+++ b/src/app/main/main-page/main-page-lap/promos-with-timer/promo-with-timer-detail/promo-with-timer-detail.component.css
@@ -1,1 +1,14 @@
 @import "../../../../../../../node_modules/bootstrap/dist/css/bootstrap.css";
+
+
+
+.discount_text{
+  font-size: 1.125rem;
+}
+
+@media (max-width : 1200px){
+  .discount_text{
+    font-size: 1rem;
+  }
+}
+
