--- a/src/app/shared-materials/carousel-products/show-product/show-product.component.html
+++ b/src/app/shared-materials/carousel-products/show-product/show-product.component.html
@@ -4,13 +4,13 @@ style="cursor: pointer;;width: 100%; height: 100%;display: flex; justify-content
 [ngClass]="{'mat-elevation-z1' : elavated}" >
 
 
-  <div style="width: 100%; height: 80%;display: flex; justify-content: center; align-items: center">
+  <div style="width: 100%; height: 75%;display: flex; justify-content: center; align-items: center">
 
     <img [src]="product.image_address[0]" alt="product-photo" class="img-fluid">
 
   </div>
 
-  <div style="width: 100%; height: 5%;display: flex; justify-content: center; align-items: center; overflow: hidden;">
+  <div style="width: 100%; height: 10%;display: flex; text-align: center;justify-content: center; align-items: center; overflow: hidden;">
     {{product.name}}
   </div>
 
