--- a/src/app/detail/detial-page/detail-page.component.html
+++ b/src/app/detail/detial-page/detail-page.component.html
@@ -1,1 +1,3 @@
-a
+<div style="width: 100%; height: 100%;padding: 0px; margin: 0px;">
+  <app-detail-page-lap [product]="product" *ngIf="lap" style="padding: 0px; margin: 0px"></app-detail-page-lap>
+</div>
