--- a/src/app/detail/detial-page/detail-page-lap/product-main-card/product-main-card.component.html
+++ b/src/app/detail/detial-page/detail-page-lap/product-main-card/product-main-card.component.html
@@ -5,6 +5,8 @@
                           justify-content: space-around;
                           align-items: center">
 
+
+
     <img [src]="product.image_address[0]" class="img-fluid"
     alt="product image" style="width: 100%; height: 80%;">
 
@@ -20,7 +22,8 @@
 
 
 
-      <img src="" alt="">
+      <!-- <img src="" alt=""> -->
+
     </div>
 
   </div>
