--- a/src/app/detail/detial-page/detail-page.component.html
+++ b/src/app/detail/detial-page/detail-page.component.html
@@ -1,3 +1,4 @@
 <div style="width: 100%; height: 100%;padding: 0px; margin: 0px;">
   <app-detail-page-lap [product]="product" *ngIf="lap" style="padding: 0px; margin: 0px"></app-detail-page-lap>
+  <app-detail-hand [product]="product" *ngIf="! lap" style="padding: 0px; margin: 0px"></app-detail-hand>
 </div>
