--- a/src/app/core/header/header-lap/auth-dialogue/login/login.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/login/login.component.html
@@ -1,3 +1,48 @@
-<p>
-  login works!
-</p>
+
+
+<div class="container mt-3">
+
+  <div class="row">
+
+    <div class="col-12">
+      <mat-form-field>
+        <input matInput placeholder="email">
+      </mat-form-field>
+    </div>
+
+    <div class="col-12">
+        <mat-form-field>
+          <input matInput placeholder="password">
+        </mat-form-field>
+    </div>
+
+    <div class="col-6" >
+      <div class="mx-2">
+        <button mat-stroked-button>
+          Login
+        </button>
+      </div>
+    </div>
+
+    <div class="col-6" >
+      <div class="mx-2">
+        <button mat-stroked-button>
+          Forgot Password
+        </button>
+      </div>
+    </div>
+
+    <div class="col-12 mt-3" >
+      <div class="mx-2">
+        <button color = "warn" mat-raised-button>
+          Login With Google  Account
+        </button>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+
+
