--- a/src/app/core/header/header-lap/auth-dialogue/sign-up/sign-up.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/sign-up/sign-up.component.html
@@ -1,5 +1,45 @@
 
 
+<div class="container mt-3">
+  <div class="row">
 
-asd
+    <div class="col-12">
+      <mat-form-field>
+        <input matInput placeholder="name">
+      </mat-form-field>
+    </div>
+
+
+    <div class="col-12">
+      <mat-form-field>
+        <input matInput placeholder="email">
+      </mat-form-field>
+    </div>
+
+    <div class="col-12">
+      <mat-form-field>
+        <input matInput placeholder="password">
+      </mat-form-field>
+    </div>
+
+    <div class="col-12">
+      <mat-form-field>
+        <input matInput placeholder="Reapeat Password">
+      </mat-form-field>
+    </div>
+
+    <div class="col-12" >
+      <div class="mx-5">
+        <button color = 'warn' mat-raised-button>
+          Sign Me Up
+        </button>
+      </div>
+    </div>
+
+
+
+  </div>
+</div>
+
+
 
