--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -32,13 +32,13 @@
       </div>
 
 
-      <div class="col-6">
+      <div class="col-6 mt-3">
         <div>
           <app-shared-button-raised [color] = "'primary'" >Save</app-shared-button-raised>
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 mt-3">
         <div>
           <app-shared-button-raised [color] = "'warn'" >Cancel</app-shared-button-raised>
         </div>
