--- a/src/app/main/main-page/main-page-lap/promos-with-timer/carousel-promo-names/carousel-promo-names.component.html
+++ b/src/app/main/main-page/main-page-lap/promos-with-timer/carousel-promo-names/carousel-promo-names.component.html
@@ -14,7 +14,9 @@
     arrow_back_ios
   </mat-icon> -->
   <div style = "width: 100%; height : 100%"
-  [@slider100] = "state_anime">
+  [ngStyle]="{'transform' :  'translateX('+ sliderContainerPos + '%' +')'}"
+  >
+  <!-- [@slider100] = "state_anime" -->
   <div style="position: absolute;left : 0px; top : 0px; height: 100%; display: flex;
   justify-content: center;
   align-items: center;"
