--- a/src/app/shared-materials/carousel-products/carousel-products.component.html
+++ b/src/app/shared-materials/carousel-products/carousel-products.component.html
@@ -61,7 +61,9 @@
     IMPORTANT : we needed the first div only because we wanted to put its position absolute-->
     <div style="width: 93%; height: 100%;overflow: hidden;">
       <div style="position: relative; width: 100%; height: 100%;"
-      [@slider100] = "state_anime">
+      [ngStyle]="{'transform' :  'translateX('+ sliderContainerPos + '%' +')'}"
+      >
+      <!-- [@slider100] = "state_anime" -->
         <!-- The div below containes the content, the flex display is to put content in the middle for each
         25% or what ever percent you might have -->
         <div *ngFor="let product of products; let i = index"
