--- a/src/app/shared-materials/shared-button-raised/shared-button-raised.component.html
+++ b/src/app/shared-materials/shared-button-raised/shared-button-raised.component.html
@@ -1,1 +1,3 @@
-<button style="width: 100%" mat-raised-button [color] = "color"><ng-content></ng-content></button>
+<button style="width: 100%" mat-raised-button [color] = "color" class="wrapping">
+  <ng-content></ng-content>
+</button>
