--- a/src/app/shared-materials/shared-button/shared-button.component.html
+++ b/src/app/shared-materials/shared-button/shared-button.component.html
@@ -1,1 +1,5 @@
-<button style="width: 100%" mat-button [color] = "color"><ng-content></ng-content></button>
+
+<button style="width: 100%" class="wrapping" mat-button [color] = "color">
+  <ng-content></ng-content>
+</button>
+
