--- a/src/app/core/header/header-lap/auth-dialogue/auth-dialogue.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/auth-dialogue.component.html
@@ -1,39 +1,41 @@
 
+<div style="position: relative;max-height: 70vh;" [perfectScrollbar]="{suppressScrollY: false,suppressScrollX: true}">
 
-<div style="width: 100%">
-  <div class="row">
+  <div style="width: 100%">
+    <div class="row">
 
-    <div id="brand_and_option" class="col-12" style="text-align: center">
+      <div id="brand_and_option" class="col-12" style="text-align: center">
 
-      <div class="row">
-        <div class="col-12">
-          {{brand_service.BRAND_NAME}}
-        </div>
-
-        <div   matRipple (click)="login = true;"  class="col-6 cp" [ngStyle]="{'background' :  login ?  'whitesmoke' : '','font-weight': login ? 'bold' : ''}">
-          <div  class="mt-3">
-            Login
-            <hr>
+        <div class="row">
+          <div class="col-12">
+            {{brand_service.BRAND_NAME}}
           </div>
-        </div>
 
-        <div matRipple (click)="login = false;"  class="col-6 cp" [ngStyle]="{'background' : ! login ?  'whitesmoke' : '','font-weight': ! login ? 'bold' : ''}">
-          <div  class="mt-3">
-            Sign Up
-            <hr>
+          <div   matRipple (click)="login = true;"  class="col-6 cp" [ngStyle]="{'background' :  login ?  'whitesmoke' : '','font-weight': login ? 'bold' : ''}">
+            <div  class="mt-3">
+              Login
+              <hr>
+            </div>
           </div>
+
+          <div matRipple (click)="login = false;"  class="col-6 cp" [ngStyle]="{'background' : ! login ?  'whitesmoke' : '','font-weight': ! login ? 'bold' : ''}">
+            <div  class="mt-3">
+              Sign Up
+              <hr>
+            </div>
+          </div>
+
         </div>
 
       </div>
 
     </div>
-
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <app-login *ngIf="login"></app-login>
-      <app-sign-up *ngIf="! login"></app-sign-up>
+    <div class="row">
+      <div class="col-12">
+        <app-login *ngIf="login"></app-login>
+        <app-sign-up *ngIf="! login"></app-sign-up>
+      </div>
     </div>
   </div>
-</div>
 
+</div>
