--- a/src/app/shared-materials/carousel-products/carousel-products.component.html
+++ b/src/app/shared-materials/carousel-products/carousel-products.component.html
@@ -1,92 +1,95 @@
 
-<div style="width: 100%; height: 100%; position: relative;
-            display: flex; flex-direction: column;">
 
-<!-- The first div below acts as the header and is made with this in mind :
-      if we are showing less than two products the our parent must be small so we have one divider
-    which shows the progress of the slid and if it is more we show to hr s -->
-<div style="flex-grow: 1; width: 10%;;width: 100%;display: flex;justify-content: space-between; align-items: center">
+<div class="fw fh" style="display: flex; flex-direction: column">
 
-  <div style="width: 33%;text-align: center;" *ngIf="nums > 2">
-    {{name_carousel}}
-    <hr style="border: 1px solid red;" >
+  <div class="container-fluid fw txs">
+    <div class="row">
+      <div class="fh col-12"
+      [ngClass] = "{'col-lg-5' : !progress_bar}">
+        <div class="my-3 mr-3 fh">
+          {{name_carousel}}
+          <hr *ngIf="!progress_bar" class="mt-1">
+          <mat-progress-bar
+          class="example-margin"
+          [color]="'warn'"
+          [mode]="'determinate'"
+          [value]="perc"
+          *ngIf="progress_bar"
+          class="mt-1">
+          </mat-progress-bar>
+        </div>
+      </div>
 
+      <div class="col-lg-7 fh" *ngIf="!progress_bar && (this.sb.xl || this.sb.large)">
+        <div class="my-3 mr-3 fh" >
+          &nbsp;
+          <hr class="mt-1 fh">
+        </div>
+      </div>
+
+    </div>
   </div>
+<!-- The lines above where used for the header -->
+  <div style="display: flex; position: relative; flex-grow: 1">
+
+    <div class="arrows al" >
+      <mat-card class="p0" matRipple (click)="showLeft();touched()" >
+        <div class="mx-2" #al>
+          <i class="material-icons fw arrowt my-3 txs">keyboard_arrow_left</i>
+        </div>
+      </mat-card>
+    </div>
+
+    <!-- actually showing data -->
+    <div class="fw p0" #scroller_container>
+      <div class="content-container fh">
+        <perfect-scrollbar class="scroll-container fh"
+        (psScrollRight) = "out_of_start()"
+        (psXReachEnd) = "reach_end()"
+        (psScrollLeft) = "out_of_end()"
+        (psXReachStart) = "reach_start()">
 
 
+          <!-- The content starts here and everything above was to set the scroll bar -->
+          <div class="flx-container fh p0" #container>
 
-  <div style= "width : 65%" *ngIf="nums > 2" >
-    &nbsp;
-    <hr>
-  </div>
+            <div *ngFor="let prod of products; let i = index;"
+            class="container-fluid fh"
+            [ngStyle]="{'width': 100/nums + '%', 'max-width': 100/nums + '%', 'min-width': 100/nums + '%'}"
+            >
+              <div class="row p0 fh">
+                <div class="col-12 my-3 p0 fh">
+                  <div class="ml-3 fh txs"
+                  [ngClass]="{'mr-3' : i == products.length - 1}" >
+                    <img [src]="prod.image_address[0]" [ngStyle]="{'max-height': maxH_pic}"
+                    class="img-fluid">
+                    <div>
+                      {{prod.name}}
+                    </div>
+                    <div>
+                      {{prod.promo_code ? prod.main_price * (1-prod.promo_code.percent) : prod.main_price}}$
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
 
 
-  <div style="width: 100%;height: 100%;display: flex;text-align: center;flex-direction: column;
-   justify-content : space-between;"  *ngIf="!(nums > 2)">
-
-    <div style="height : 80%; display: flex;text-align: center;flex-direction: column;
-    justify-content : center;align-items: center;">
-      <div>
-        {{name_carousel}}
+        </perfect-scrollbar>
       </div>
     </div>
 
-    <mat-progress-bar
 
-        [color]="'warn'"
-        [mode]="'determinate'"
-        [value]="perc">
-    </mat-progress-bar>
-
-  </div>
-
-
-
-</div>
-
-
-<div  style="flex-grow: 1;width: 100%; height: 80%; position: relative">
-
-  <div  (click) = "showLeft();touched()" style="cursor: pointer;position: absolute; z-index: 9999;
-  left: 0px; height: 100%; display: flex; justify-content: center; align-items: center"
-  [ngStyle]="{'opacity': canShowLeft() ? '1' : '0.5' }">
-    <i class="material-icons" style="color: black;font-size: 3rem">keyboard_arrow_left</i>
-  </div>
-
-  <div style="position: absolute;left: 0px;width: 100%;height: 100%;
-  display: flex; justify-content: center; align-items: center; overflow: hidden;" >
-    <!-- The second inner div moves inside the div above it and it doesn't cover all of the above div
-    because we don't want it to have overlap with our arrows, actually the first child handles this
-    and the matter that overflow should be hidden,
-    IMPORTANT : we needed the first div only because we wanted to put its position absolute-->
-    <div style="width: 93%; height: 100%;overflow: hidden;">
-      <div style="position: relative; width: 100%; height: 100%;"
-      [ngStyle]="{'transform' :  'translateX('+ sliderContainerPos + '%' +')'}"
-      >
-      <!-- [@slider100] = "state_anime" -->
-        <!-- The div below containes the content, the flex display is to put content in the middle for each
-        25% or what ever percent you might have -->
-        <div *ngFor="let product of products; let i = index"
-        style="position: absolute; left: 0 px;top : 0px;height: 100%;
-        display: flex; justify-content: center; align-items: center; "
-        [ngStyle]="{'width': 100/nums + '%', 'transform' :  'translateX('+ i * (100) + '%' +')'}">
-        <!-- The div below is to show the details and the one above it is its container -->
-
-        <div style="width: 95%; height: 95%;">
-          <app-show-product [product]="product"></app-show-product>
-        </div>
-
-        </div>
-      </div>
+    <div class="arrows ar" >
+      <mat-card class="p0" matRipple (click) = "showRight(); touched()">
+        <div class="mx-2" #ar>
+          <i class="material-icons fw arrowt my-3 txs">keyboard_arrow_right</i>
+         </div>
+      </mat-card>
     </div>
+
   </div>
-
-  <div (click) = "showRight();touched()" style="cursor: pointer;;position: absolute; z-index: 9999;
-  right: 0px; height: 100%; display: flex; justify-content: center; align-items: center"
-  [ngStyle]="{'opacity': canShowRight() ? '1' : '0.5' }">
-    <i class="material-icons" style="color: black;font-size: 3rem">keyboard_arrow_right</i>
-  </div>
-</div>
-
-
 </div>
