--- a/src/app/shared-materials/shared-button-flat/shared-button-flat.component.html
+++ b/src/app/shared-materials/shared-button-flat/shared-button-flat.component.html
@@ -1,1 +1,3 @@
-<button style="width: 100%" mat-flat-button [color] = "color"><ng-content></ng-content></button>
+<button style="width: 100%" mat-flat-button [color] = "color" class="wrapping">
+  <ng-content></ng-content>
+</button>
