--- a/src/app/shared-materials/shared-button-stroked/shared-button-stroked.component.html
+++ b/src/app/shared-materials/shared-button-stroked/shared-button-stroked.component.html
@@ -1,1 +1,3 @@
-<button style="width: 100%" mat-stroked-button [color] = "color"><ng-content></ng-content></button>
+<button style="width: 100%" class="wrapping" mat-stroked-button [color] = "color">
+  <ng-content></ng-content>
+</button>
