--- a/src/app/main/main-page/promos-with-timer/promos-with-timer.component.html
+++ b/src/app/main/main-page/promos-with-timer/promos-with-timer.component.html
@@ -1,7 +1,7 @@
 <!-- you have to use fh to cope with bootstrap flex -->
 
-<mat-card class="p0">
-<div class="container-fluid">
+<mat-card class="p0 fh">
+<div class="container-fluid fh centrifyc">
   <div class="row p0">
     <!-- This is the names -->
     <div class="col-3 p0">
