--- a/src/app/detail/detial-page/detail-page.component.html
+++ b/src/app/detail/detial-page/detail-page.component.html
@@ -1,4 +1,167 @@
-<div style="width: 100%; height: 100%;padding: 0px; margin: 0px;">
+<!-- <div style="width: 100%; height: 100%;padding: 0px; margin: 0px;">
   <app-detail-page-lap [product]="product" *ngIf="lap" style="padding: 0px; margin: 0px"></app-detail-page-lap>
   <app-detail-hand [product]="product" *ngIf="! lap" style="padding: 0px; margin: 0px"></app-detail-hand>
+</div> -->
+<div class="container-fluid">
+
+
+  <div class="row p0 mt-3">
+
+    <div class="col-12 p0">
+
+      <div class="mx-3 p0">
+
+        <mat-card class="fw fh p0">
+
+          <!-- Down Here we have the details of a product -->
+          <div class="container-fluid">
+
+            <div class="row p0 ">
+
+              <!-- This is the image of the detail col-md-6-->
+              <div class="col-lg-4  col-12 my-3">
+                <div class="mx-3 fh centrifier">
+                  <div class="img-container-main"
+                  [ngStyle]="{'padding-top' : (sb.large || sb.xl) ? '100%' : '80%'}">
+                    <div class="img-main fh" >
+                      <img [src]="product.image_address[0]" alt="product image" class="fw fh">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Description of the item col-md-6-->
+              <div class="col-lg-8  col-12 my-3">
+                <div class="mx-3 fh">
+
+                  <!-- This is what will describe the item but it will be responsive -->
+                  <div class="container-fluid fw">
+
+                    <div class="row p0">
+
+                      <!-- Product name -->
+                      <div class="col-12 mt-3" id = "prod_name">
+                        {{product.name}}
+                        <hr>
+                      </div>
+
+                      <div class="col-lg-8 col-12" >
+                        <div class="container-fluid">
+                          <div class="row p0">
+                            <!-- Brand Info -->
+                            <div class="col-6 p0 mt-3">
+                              <div class=" fh">
+                              Brand : <a class="li-u">{{product.maker.name}}</a>
+                              </div>
+                            </div>
+                            <!-- Category Info -->
+                            <div class="col-6 p0 mt-3" >
+                              <div class="fh">
+                              Category : <a class="li-u">{{product.category.name}}</a>
+                              </div>
+                            </div>
+
+                            <div class="col-12 p0">
+                              <hr class="mt-3">
+                            </div>
+
+                          <div class="col-6  p0 mt-3">
+                            <div class="fh fw"
+                            >
+                              <mat-icon [color]="'warn'">directions_car</mat-icon> Fast Delivery
+                            </div>
+                          </div>
+
+                          <div class="col-6 p0 mt-3">
+                            <div class="fh fw"
+                            >
+                            <!-- [ngClass]="{'centrifyr' : sb.medium}" -->
+                              <mat-icon [color]="'warn'">person</mat-icon> Retailer : <a class="li-u">{{product.retailer ? product.retailer.user.name : brandService.BRAND_NAME}}</a>
+                            </div>
+                          </div>
+
+                          <div class="col-12 p0">
+                            <hr class="mt-3">
+                          </div>
+
+                          <div class="col-12 p0 mt-3">
+                            <div class="fh fw centrifyr" >
+                              <mat-icon [color]="'warn'">check_box</mat-icon> Guaranteed Product
+                            </div>
+                          </div>
+
+
+                          <div class="col-12 p0">
+                            <hr class="mt-3">
+                          </div>
+
+                          <!-- Down Here we have the price infor  -->
+
+                          <div class="col-12 mt-3  p0 old-price" *ngIf="product.promo_code">
+                            {{product.main_price}} $ CAD
+                          </div>
+                          <div class="p0 mt-3  new-price"
+                          [ngClass]="{'col-12' : ! product.promo_code, 'col-4' : product.promo_code}" >
+                            {{product.main_price * (1-product.promo_code.percent)}} $ CAD
+                          </div>
+                          <div class="col-4 mt-3  p0 " *ngIf="product.promo_code">
+                            <mat-chip-list class="fh">
+                              <mat-chip class="fh" color = "warn" selected>
+                                {{product.promo_code.percent * 100}} % discount
+                              </mat-chip>
+                            </mat-chip-list>
+                          </div>
+                          <div class="col-12"></div>
+
+                          <div class="col-12 my-3 p0">
+                            <app-shared-button-stroked color = "warn">
+                              {{product.promo_code ? product.main_price * (1-product.promo_code.percent) : product.main_price}} $ <mat-icon color = "warn">add_shopping_cart</mat-icon>
+                            </app-shared-button-stroked>
+                          </div>
+
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-4 col-12" >
+                        <!-- TODO add the condition when we dont have any main features -->
+                        <mat-chip-list class="centrifyc">
+                          <mat-chip [color] = "'warn'" selected>
+                            Product Features
+                          </mat-chip>
+                        </mat-chip-list>
+                        <ul *ngFor="let feat of product.main_features">
+                          <li class="my-3 features">
+                            {{feat}}
+                          </li>
+                        </ul>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+
+          </div>
+
+        </mat-card>
+
+      </div>
+
+    </div>
+
+  </div>
+
+
 </div>
+
+
+
+
