nav mobile made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <mat-sidenav-container style="width: 100%; padding: 0px; margin: 0px;">
-  <mat-sidenav style="width:50vw" [mode] = "'push'" #side_nav>
+  <mat-sidenav style="width:50vw" [mode] = "'over'" #side_nav>
     <app-navbar></app-navbar>
   </mat-sidenav>
   <!-- TODO Decide To Add a size limit like digi kala site and make it more dynamice for smaller sizes -->
