--- a/src/app/core/header/header-hand/header-hand.component.css
+++ b/src/app/core/header/header-hand/header-hand.component.css
@@ -15,3 +15,27 @@ mat-toolbar{
 mat-icon{
   cursor: pointer;
 }
+
+
+hr{
+  margin: 0px;
+}
+
+
+.contianer-img{
+  width: 100%;
+  position: relative;
+}
+
+.img-brand{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+mat-form-field{
+  margin: 0px;
+}
+
